docs & controllers
Finished the docs; moved some controllers to the Frontend sub-folder.
