# public/docs/openapi.yaml
@@ -45,15 +45,15 @@ paths:
                 name:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: bejwx
+                  example: bywhioiiou
                 email:
                   type: string
                   description: 'Must be a valid email address. Must not be greater than 255 characters.'
-                  example: ahmad34@example.org
+                  example: miracle66@example.org
                 password:
                   type: string
                   description: ''
-                  example: voluptatem
+                  example: fuga
                 password_confirmation:
                   type: string
                   description: 'Must have the same value as password.'
@@ -102,11 +102,11 @@ paths:
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: gladyce.wehner@example.net
+                  example: langosh.makenzie@example.org
                 password:
                   type: string
                   description: ''
-                  example: rerum
+                  example: non
               required:
                 - email
                 - password
@@ -206,11 +206,11 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: iste
+                  example: est
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: janie.wolf@example.org
+                  example: tbernier@example.com
               required:
                 - name
                 - email
@@ -252,11 +252,11 @@ paths:
                 current_password:
                   type: string
                   description: ''
-                  example: quia
+                  example: adipisci
                 password:
                   type: string
                   description: ''
-                  example: et
+                  example: sapiente
                 password_confirmation:
                   type: string
                   description: 'Must have the same value as password.'
@@ -355,29 +355,16 @@ paths:
                 example: '{"errors": [list]}'
       tags:
         - Book
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                category_id:
-                  type: integer
-                  description: 'Must be at least 1.'
-                  example: 12
-              required:
-                - category_id
       security: []
     parameters:
       -
         in: path
         name: category_id
-        description: 'The ID of the category.'
-        example: sed
+        description: "The category's ID."
+        example: 82
         required: true
         schema:
-          type: string
+          type: integer
   '/api/books/{book_id}':
     get:
       summary: 'Show Book'
@@ -499,15 +486,15 @@ paths:
                 name:
                   type: string
                   description: 'This field is required when none of <code>rating</code> and <code>category_id</code> are present. Must not be greater than 255 characters.'
-                  example: nzostkysrsnxkybwlundefy
+                  example: gyovpgcypzhihoqmulfhp
                 rating:
                   type: integer
                   description: 'This field is required when none of <code>name</code> and <code>category_id</code> are present. Must be at least 1. Must not be greater than 5.'
-                  example: 4
+                  example: 5
                 category_id:
                   type: integer
                   description: 'This field is required when none of <code>name</code> and <code>rating</code> are present. Must be at least 1.'
-                  example: 28
+                  example: 57
     delete:
       summary: 'Delete Book'
       operationId: deleteBook
@@ -530,7 +517,7 @@ paths:
         in: path
         name: book_id
         description: 'The ID of the book.'
-        example: 1
+        example: 6
         required: true
         schema:
           type: integer
@@ -665,15 +652,15 @@ paths:
                 name:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: qcfjgccdyujrxqxyjwwdppd
+                  example: yjmpcaowxzelbrymaenfmlocv
                 rating:
                   type: integer
                   description: 'Must be at least 1. Must not be greater than 5.'
-                  example: 5
+                  example: 4
                 category_id:
                   type: integer
                   description: 'Must be at least 1.'
-                  example: 33
+                  example: 78
               required:
                 - name
                 - rating
@@ -747,15 +734,15 @@ paths:
                 category_id:
                   type: integer
                   description: 'Must be at least 1.'
-                  example: 86
+                  example: 12
                 name:
                   type: string
                   description: ''
-                  example: repellendus
+                  example: repellat
                 rating:
                   type: integer
                   description: 'Must be at least 1. Must not be greater than 5.'
-                  example: 4
+                  example: 2
                 condition:
                   type: integer
                   description: 'The actual exemplar condition (1=LikeNew, 2=Good, 3=Worn, 4=Damaged).'
@@ -853,7 +840,7 @@ paths:
         in: path
         name: exemplar_id
         description: 'The ID of the exemplar.'
-        example: 1
+        example: 11
         required: true
         schema:
           type: integer
@@ -1019,31 +1006,25 @@ paths:
       tags:
         - Borrow
       requestBody:
-        required: true
+        required: false
         content:
           application/json:
             schema:
               type: object
               properties:
-                exemplar_id:
-                  type: integer
-                  description: 'Must be at least 1.'
-                  example: 42
                 condition:
                   type: integer
                   description: 'optional The actual exemplar condition (1=LikeNew, 2=Good, 3=Worn, 4=Damaged).'
                   example: 4
-              required:
-                - exemplar_id
     parameters:
       -
         in: path
         name: exemplar_id
-        description: 'The ID of the exemplar.'
-        example: ipsa
+        description: "The exemplar's ID."
+        example: 8247
         required: true
         schema:
-          type: string
+          type: integer
   /api/categories:
     get:
       summary: 'List Categories'
@@ -1103,7 +1084,7 @@ paths:
                 start:
                   type: integer
                   description: 'Must be at least 1.'
-                  example: 56
+                  example: 9
       security: []
     post:
       summary: 'Create Category'
@@ -1150,7 +1131,7 @@ paths:
                 name:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: esgursbewlavxllpiyazkdwkp
+                  example: xvwhqujwz
               required:
                 - name
   '/api/categories/{category_id}':
@@ -1168,18 +1149,18 @@ paths:
                 type: object
                 example:
                   data:
-                    id: 30
-                    name: 'Minima quia eum atque enim.'
+                    id: 1454
+                    name: 'Recusandae ut aut cum odit.'
                 properties:
                   data:
                     type: object
                     properties:
                       id:
                         type: integer
-                        example: 30
+                        example: 1454
                       name:
                         type: string
-                        example: 'Minima quia eum atque enim.'
+                        example: 'Recusandae ut aut cum odit.'
         404:
           description: 'Category not found.'
           content:
@@ -1204,18 +1185,18 @@ paths:
                 type: object
                 example:
                   data:
-                    id: 31
-                    name: 'Distinctio cumque eum est.'
+                    id: 1455
+                    name: 'Minus soluta et unde et est.'
                 properties:
                   data:
                     type: object
                     properties:
                       id:
                         type: integer
-                        example: 31
+                        example: 1455
                       name:
                         type: string
-                        example: 'Distinctio cumque eum est.'
+                        example: 'Minus soluta et unde et est.'
         404:
           description: 'Category not found.'
           content:
@@ -1242,7 +1223,7 @@ paths:
                 name:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: suwpdzoiqnsagpykehfvkt
+                  example: ptutkxencycnupnxjtmzhsoor
               required:
                 - name
     delete:
@@ -1267,7 +1248,7 @@ paths:
         in: path
         name: category_id
         description: 'The ID of the category.'
-        example: 1
+        example: 11
         required: true
         schema:
           type: integer
@@ -1392,11 +1373,11 @@ paths:
                 book_id:
                   type: integer
                   description: 'This field is required when none of <code>condition</code>, <code>borrowable</code>, and <code>change_donor</code> are present. Must be at least 1.'
-                  example: 56
+                  example: 8
                 condition:
                   type: integer
                   description: 'This field is required when none of <code>book_id</code>, <code>borrowable</code>, and <code>change_donor</code> are present. Must be at least 1. Must not be greater than 4.'
-                  example: 2
+                  example: 3
                 borrowable:
                   type: boolean
                   description: 'This field is required when none of <code>book_id</code>, <code>condition</code>, and <code>change_donor</code> are present.'
@@ -1404,7 +1385,7 @@ paths:
                 user_id:
                   type: integer
                   description: 'This field is required when <code>change_donor</code> is <code>true</code>. Must be at least 1.'
-                  example: 31
+                  example: 5
                 change_donor:
                   type: boolean
                   description: 'optional Set this field to true to update the donor. Default is false.'
@@ -1431,7 +1412,7 @@ paths:
         in: path
         name: exemplar_id
         description: 'The ID of the exemplar.'
-        example: 1
+        example: 7
         required: true
         schema:
           type: integer
@@ -1522,16 +1503,12 @@ paths:
       tags:
         - Exemplar
       requestBody:
-        required: true
+        required: false
         content:
           application/json:
             schema:
               type: object
               properties:
-                book_id:
-                  type: integer
-                  description: 'Must be at least 1.'
-                  example: 48
                 condition:
                   type: integer
                   description: 'optional Worst condition acceptable (1=LikeNew, 2=Good, 3=Worn, 4=Damaged).'
@@ -1540,18 +1517,16 @@ paths:
                   type: boolean
                   description: 'optional Set it to false if unborrowable exemplars are acceptable to be listed. Default is true.'
                   example: true
-              required:
-                - book_id
       security: []
     parameters:
       -
         in: path
         name: book_id
-        description: 'The ID of the book.'
-        example: sint
+        description: "The book's ID."
+        example: 831
         required: true
         schema:
-          type: string
+          type: integer
   /api/exemplars:
     post:
       summary: 'Create Exemplar'
@@ -1614,7 +1589,7 @@ paths:
                 book_id:
                   type: integer
                   description: 'Must be at least 1.'
-                  example: 10
+                  example: 27
                 condition:
                   type: integer
                   description: 'The actual condition (1=LikeNew, 2=Good, 3=Worn, 4=Damaged).'
@@ -1695,7 +1670,7 @@ paths:
                 book_id:
                   type: integer
                   description: 'Must be at least 1.'
-                  example: 36
+                  example: 20
                 condition:
                   type: integer
                   description: 'The actual condition (1=LikeNew, 2=Good, 3=Worn, 4=Damaged).'
@@ -1755,25 +1730,12 @@ paths:
                 example: '{"errors": [list]}'
       tags:
         - ExemplarLoss
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                exemplar_id:
-                  type: integer
-                  description: 'Must be at least 1.'
-                  example: 26
-              required:
-                - exemplar_id
     parameters:
       -
         in: path
         name: exemplar_id
         description: 'integer The ID of the lost exemplar.'
-        example: null
+        example: '54'
         required: true
         schema:
           type: string
@@ -2161,7 +2123,7 @@ paths:
                 money:
                   type: integer
                   description: ''
-                  example: 7
+                  example: 16
               required:
                 - money
     parameters:
@@ -2169,7 +2131,7 @@ paths:
         in: path
         name: payment_id
         description: 'The ID of the payment.'
-        example: 1
+        example: 7
         required: true
         schema:
           type: integer
